corpus/c/macro_include/case-11/snapshots/gcc15/dual_sink_structured/render.default.txt
error: [macro_include] error surfaced through macro/include context @ src/main.c:9:12
help: inspect the user-owned macro invocation or include edge that reaches the failing line
from: invocation of 'READ_MISSING' @ src/main.c:9:12
via : include src/wrapper.h:1 <- src/main.c:1
| src/main.c:9:12
|     return READ_MISSING(box);
|            ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output